# DeltaScan

./: .gitignore  Pipfile  README.md  config.yaml  data_for_html.json  diffs_wwwwww.json  example_diff_results_for_html_template.json  example_diff_results_for_html_templayte.json  example_scan_results_for_html_template.json  export.html  main.py  mkdocs.yaml  nmap_parser.py  pyproject.toml  pytest.ini  re.html  reka.html  requirements.txt  scans_192.168.0.142_TCP_PORTS_FULL_NO_PING_NO_DNS_2024-06-25_17:25:18_prigkos.json  scans_192.168.0.142_TCP_PORTS_FULL_NO_PING_NO_DNS_2024-06-25_17:26:26_prigkos.json  scans_192.168.0.142_TCP_PORTS_FULL_NO_PING_NO_DNS_2024-06-25_17:27:37_prigkos.json  scans_jdjdjjdd.json  setup.py  tox.ini
.github/workflows/: pipeline.yml  python-app.yml
cli/: data_presentation.py
db/: data_handler.py  db_manager.py
deltascan/: main.py
deltascan/cli/: cli_output.py  cmd.py  data_presentation.py  utils.py
deltascan/core/: config.py  deltascan.py  exceptions.py  export.py  importer.py  output.py  parser.py  scanner.py  schemas.py  store.py  utils.py
deltascan/presentation/: data_presentation.py
deltascan/scans/: port_scanner_facade.py
docs/: cmd.md  deltascan.md  exporter.md  importer.md  index.md  manager.md  scanner.md  store.md
presentation/: data_presentation.py
reports/: pdf_generator.py
scans/: port_scanner.py  port_scanner_facade.py  scanner.py
tests/: conftest.py
tests/unit/: __init__.py  test_db.py  test_deltascan.py  test_exporter.py  test_importer.py  test_main.py  test_output.py  test_parser.py  test_scanner.py  (+3 more)
(+8 files in other folders)
