[tool.poetry]
name = "deltascan"
version = "1.0.1"
description = "An Nmap wrapper CLI tool for network scanning and comparison between scan report files (xml, json)"
authors = ["Logisek Developers"]
license = "GNU"

[tool.poetry.dependencies]
python = ">=3.8"
blessed="1.20.0"
chardet="5.2.0"
inquirer="3.1.4"
markdown-it-py="3.0.0"
mdurl="0.1.2"
peewee="3.17.0"
Pillow="10.1.0"
Pygments="2.17.2"
python-editor="1.0.4"
readchar="4.0.5"
rich="13.7.0"
simplejson="3.19.2"
six="1.16.0"
wcwidth="0.2.12"
pyyaml="6.0"
marshmallow="3.21.3"
jinja2="3.1.3"
getkey="0.6"
python-libnmap={ git = "https://github.com/Logisek/python-libnmap.git", branch = "master" }
pdfkit="1.0.0"
xmltodict="0.14.1"
inputimeout="1.0.4"

[tool.poetry.group.test.dependencies]
pytest="^7.0.1"
dotmap="1.3.30"

[tool.poetry.group.dev.dependencies]
black="^21.12b0"
mkdocs="^1.3.1"
mkdocs-material="^8.2.11"
mkdocstrings="^0.17.0"
flake8="^4.0.1"

[tool.poetry.scripts]
dscan = "deltascan.cli.cmd:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
